[gd_scene load_steps=12 format=3 uid="uid://cq4pldhlfo05d"]

[ext_resource type="Script" path="res://Player/FSM_Player.gd" id="1"]
[ext_resource type="Script" path="res://Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b1rmi736qm4hw" path="res://Player/PlayerArmsSprite.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bl1k0qdcxj4uw" path="res://Player/PlayerTorso.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dkx2wfonpe6oi" path="res://Player/PlayerLegsSprite.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dmms584n8bq86" path="res://Player/PlayerHeadSprite.png" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 1.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -24), Vector2(0, -23), Vector2(0, -24)]
}

[sub_resource type="Animation" id="4"]
resource_name = "Walk_Backward"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 10, 9, 8, 7, 6, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -24), Vector2(0, -23), Vector2(0, -24), Vector2(0, -23)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Walk_Forward"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -23), Vector2(0, -24), Vector2(0, -23), Vector2(0, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsrwg"]
_data = {
"Idle": SubResource("2"),
"Walk_Backward": SubResource("4"),
"Walk_Forward": SubResource("3")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("2")

[node name="FSM" type="Node" parent="."]
script = ExtResource("1")

[node name="PlayerSprite" type="Node2D" parent="."]

[node name="Legs" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(0, -16)
texture = ExtResource("5")
hframes = 4
vframes = 3
frame = 9

[node name="Torso" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(0, -24)
texture = ExtResource("4")

[node name="AimPivot" type="Marker2D" parent="PlayerSprite/Torso"]
position = Vector2(0, -2)

[node name="L_Arm" type="Sprite2D" parent="PlayerSprite/Torso"]
z_index = -1
position = Vector2(0, -2)
texture = ExtResource("3")
offset = Vector2(4, 1)
hframes = 2
frame = 1

[node name="Head" type="Sprite2D" parent="PlayerSprite/Torso"]
position = Vector2(0, -8)
texture = ExtResource("6")

[node name="R_Arm" type="Sprite2D" parent="PlayerSprite/Torso"]
position = Vector2(-4, -2)
texture = ExtResource("3")
offset = Vector2(5, 0)
hframes = 2

[node name="Hand" type="Marker2D" parent="PlayerSprite/Torso/R_Arm"]
position = Vector2(12, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("1")

[node name="LegsAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fsrwg")
}
autoplay = "Idle"
